<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_f5f6f9"
    android:orientation="vertical">
    <com.pingan.cs.widget.CommonTitleView
        android:id="@+id/common_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></com.pingan.cs.widget.CommonTitleView>
    <com.pingan.cs.widget.TextEditView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></com.pingan.cs.widget.TextEditView>
    <View
        android:layout_width="match_parent"
        android:background="@color/gray_e6e6e6"
        android:layout_marginLeft="@dimen/dp_15.0"
        android:layout_height="1px"/>

    <com.pingan.cs.widget.TextEditView
        android:id="@+id/box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></com.pingan.cs.widget.TextEditView>
    <View
        android:layout_width="match_parent"
        android:background="@color/gray_e6e6e6"
        android:layout_marginLeft="@dimen/dp_15.0"
        android:layout_height="1px"/>
    <com.pingan.cs.widget.TextEditView
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></com.pingan.cs.widget.TextEditView>
    <View
        android:layout_width="match_parent"
        android:background="@color/gray_e6e6e6"
        android:layout_marginLeft="@dimen/dp_15.0"
        android:layout_height="1px"/>
    <com.pingan.cs.widget.TextEditView
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></com.pingan.cs.widget.TextEditView>
    <View
        android:layout_width="match_parent"
        android:background="@color/gray_e6e6e6"
        android:layout_marginLeft="@dimen/dp_15.0"
        android:layout_height="1px"/>
    <com.pingan.cs.widget.TextEditView
        android:id="@+id/threem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></com.pingan.cs.widget.TextEditView>
    <View
        android:layout_width="match_parent"
        android:background="@color/gray_e6e6e6"
        android:layout_marginLeft="@dimen/dp_15.0"
        android:layout_height="1px"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_10"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45.0"
        android:textSize="@dimen/text_size_15"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp_25.0"
        android:textColor="@color/black_333333"
        android:text="@string/affair_letter_conten"
        android:layout_gravity="center_vertical"/>
    <EditText
        android:id="@+id/et_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray_f5f6f9"
        android:gravity="top"
        android:hint="@string/affair_letter_hint"
        android:paddingBottom="@dimen/dp_13.0"
        android:paddingLeft="@dimen/dp_25.0"
        android:paddingRight="@dimen/dp_15.0"
        android:paddingTop="@dimen/dp_13.0"
        android:maxLength="150"
        android:textColor="@color/black_333333"
        android:textColorHint="#A29D9d"
        android:textSize="14sp" />
    <View
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"/>
    <TextView
        android:id="@+id/tv_save"
        android:layout_width="@dimen/dp_295.0"
        android:layout_height="@dimen/dp_50"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_30.0"
        android:layout_marginBottom="@dimen/dp_25.0"
        android:background="@drawable/bg_btn_gray"
        android:gravity="center"
        android:text="@string/commit"
        android:textColor="@color/white_ffffff"
        android:textSize="15sp" />
</LinearLayout>
